images loaded, dropdown menu done

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS only Dropdown Menu</title>
-    <link href="style.css" type="text/css" rel="stysheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
     <div class="dropdown-menu">
+        <input type="checkbox" id="menu">
+        <label for="menu">Menu</label>
         <div class="menu-content">
             <ul>
                 <li><a href="#">Home</a></li>
